[package]
name = "todomvc"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = {version="1.24.2",features=["full"]}
futures = "0.3.25"
thiserror = "1.0.38"

#JSON libs
serde= "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"

#Web libs
warp = "0.3.3"

#DB libs
sqlx = {version="0.6.2",features=["runtime-tokio-rustls","postgres"]}
sqlb = "0.0.8"

[dev-dependencies]
anyhow ="1.0.68"
